crates/aif-markdown/tests/snapshots/import_md__import_markdown_with_code.snap
---
source: crates/aif-markdown/tests/import_md.rs
assertion_line: 22
expression: doc
---
metadata:
  _aif_import_mode: generic
  _aif_source_format: markdown
  title: Code
blocks:
  - kind:
      type: Section
      attrs:
        id: ~
        pairs: {}
      title:
        - type: Text
          text: Code
      children: []
    span:
      start: 0
      end: 0
  - kind:
      type: CodeBlock
      lang: rust
      attrs:
        id: ~
        pairs: {}
      code: "fn main() {}\n"
    span:
      start: 0
      end: 0
