crates/aif-markdown/tests/snapshots/import_md__import_markdown_with_list.snap
---
source: crates/aif-markdown/tests/import_md.rs
assertion_line: 15
expression: doc
---
metadata:
  _aif_import_mode: generic
  _aif_source_format: markdown
  title: Lists
blocks:
  - kind:
      type: Section
      attrs:
        id: ~
        pairs: {}
      title:
        - type: Text
          text: Lists
      children: []
    span:
      start: 0
      end: 0
  - kind:
      type: List
      ordered: false
      items:
        - content:
            - type: Text
              text: item one
          children: []
        - content:
            - type: Text
              text: item two
          children: []
        - content:
            - type: Text
              text: item three
          children: []
    span:
      start: 0
      end: 0
