crates/aif-markdown/tests/snapshots/import_md__import_simple_markdown.snap
---
source: crates/aif-markdown/tests/import_md.rs
assertion_line: 8
expression: doc
---
metadata:
  _aif_import_mode: generic
  _aif_source_format: markdown
  title: Hello World
blocks:
  - kind:
      type: Paragraph
      content:
        - type: Text
          text: This is a paragraph.
    span:
      start: 0
      end: 0
  - kind:
      type: Section
      attrs:
        id: ~
        pairs: {}
      title:
        - type: Text
          text: Section Two
      children: []
    span:
      start: 0
      end: 0
  - kind:
      type: Paragraph
      content:
        - type: Text
          text: More text here.
    span:
      start: 0
      end: 0
